# clairo

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  main.py  manage.py  notas.txt  pyproject.toml
.github/workflows/: pipeline-testing.yml  tests.yml
accounts/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_usertoken_token.py
chat/: admin.py  consumers.py  exceptions.py  forms.py  models.py  routing.py  signals.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_chat_chat_uuid.py  0002_usertoken.py  0003_alter_chat_chat_uuid.py  0003_alter_usertoken_token.py  0004_alter_chat_chat_uuid.py  0004_alter_usertoken_token.py  0005_alter_chat_chat_uuid.py  0005_delete_usertoken.py  0006_useronlinestatus.py  0007_remove_chat_is_private.py
chat/static/js/: chat.js  online.js
chat/templates/: base.html  chat-list.html  footer.html
chat/templates/chat/: chat-old.html  chat-quebrado.html  chat.html  chat_message-old.html  home.html  login.html  profile.html  search.html
chat/templates/chat/partials/: chat_message_p.html
clairo/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  500.html
templates/registration/: login.html  reset_password.html  signup.html  token.html  token_validation.html  update_password.html
