[project]
name = "clairo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.1",
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "django-htmx>=1.24.0",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
]

[tool.ruff]
exclude = ["urls.py"]
line-length = 88

[tool.ruff.format]
indent-style = "tab"
quote-style = "single"
